added item priority for GUIs prevent error during shutdown for bossbar fixed Folia item duplication for invsee